syntax = "proto3";

package shortener;

option go_package = "go-shortener/proto";

message CreateShortenRequest {
  string URL = 1;
  string id = 2;
}

message CreateShortenResponse {
  string url = 1;
}

message GetShortenRequest {
  string id = 1;
}

message GetShortenResponse {
  string error = 1;
}

message GetPingRequest {}

message GetPingResponse {
  bool active = 1;
}

message Batch {
  string user_id = 1;
  string correlation_id = 2;
  string original_url = 3;
  string short_url = 4;
}

message CreateShortenBatchRequest {
  repeated Batch batches = 1;
  string id = 2;
}

message BatchURL {
  string correlation_id = 1;
  string short_url = 2;
}

message CreateShortenBatchResponse {
  repeated BatchURL urls = 1;
  string error = 2;
}

message GetAllShortensRequest {
  string id = 1;
}

message URLItem {
  string short_url = 1;
  string original_url = 2;
  bool is_deleted = 3;
}

message GetAllShortensResponse {
  repeated URLItem items = 1;
  string error = 2;
}

message DeleteShortensRequest {
  repeated string urls = 1;
  string id = 2;
}

message DeleteShortensResponse {
  string error = 1;
}


service Shortener {
  rpc CreateShorten(CreateShortenRequest) returns (CreateShortenResponse);
  rpc GetShorten(GetShortenRequest) returns (GetShortenResponse);
  rpc GetPing(GetPingRequest) returns (GetPingResponse);
  rpc CreateShortenBatch(CreateShortenBatchRequest) returns (CreateShortenBatchResponse);
  rpc GetAllShortens(GetAllShortensRequest) returns (GetAllShortensResponse);
  rpc DeleteShortens(DeleteShortensRequest) returns (DeleteShortensResponse);
}